@@ -18,6 +18,7 @@ TinyWall Changelog
 - Raw socket and promiscuous mode rights management
 - Update traffic rate in tray menu live while visible
 - Fix: Don't leave locked files on service exit
+- Fix: Race condition between update check and service message loop
 
 ---------------------
 
